# polocloud

./: .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE  README.md  Readme.md  SECURITY.md  build.gradle.kts  cloud_verisons.json  cloud_versions.json  crowdin.yml  documentation.md  gradle.properties  gradlew  platforms.json  settings.gradle.kts  vercel.json  versions.json
.github/: FUNDING.yml  LICENSE_HEADER  README.md  dependabot.yml  docs-deploy.yml
addons/: build.gradle.kts
agent/: build.gradle.kts
api/: build.gradle.kts
base/: build.gradle.kts
bridges/: build.gradle.kts
common/: build.gradle.kts
dashboard/: .dockerignore  Dockerfile  docker-compose.yml  middleware.ts  next.config.mjs  package-lock.json  package.json  postcss.config.js  tailwind.config.js  temp_sidebar_start.txt  vercel.json
data/: partners.json  platforms.json
discord/: .eslintrc.js  .gitignore  env.example  package.json  tsconfig.json
docker/: Dockerfile  docker-compose.yml  setup.md
docs/: README.md  docs.json  index.mdx  next.config.mjs  package-lock.json  package.json  source.config.ts  vercel.json
documentation/: package-lock.json  package.json  vercel.json
gradle/: libs.versions.toml
instance/: build.gradle.kts
k8s/: local-lobby-group.yml  local-polocloud-init.yml  local-runtime-lobby.bat  (+4 more)
sdk/sdk-rust/: Cargo.toml  README.md  build.rs
sdk/sdk-rust/src/: events.rs  lib.rs  proto_deserializers.rs  providers.rs  structs.rs
sdk/sdk-rust/src/providers/: event_provider.rs  group_provider.rs  player_provider.rs  service_provider.rs
(+2607 files in other folders)
