[package]
name = "polocloud-sdk"
version = "3.0.0-pre.6.2-SNAPSHOT"
edition = "2024"

[dependencies]
tonic = "0.14.0"
tonic-prost = "0.14.0"
prost = "0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = "1.47.0"

[build-dependencies]
tonic-prost-build = "0.14.0"
